# akarin-vapoursynth-plugin

./: .gitignore  README.md  flake.nix  hatch_build.py  meson.build  meson_options.txt  package.nix  plugin.cpp  pyproject.toml
.github/: renovate.json
.github/workflows/: ci.yml
expr2/: exprfilter.cpp
expr2/reactor/: LLVMJIT.cpp  LLVMReactor.cpp
text/: textfilter.cpp
