[build-system]
requires = [
    "hatchling>=1.27.0",
    "vapoursynth>=74",
    "meson==1.11.0",
    "ninja==1.13.0",
]
build-backend = "hatchling.build"

[project]
name = "vapoursynth-akarin"
dynamic = ["version"]
description = "VapourSynth plugin collection with enhanced Expr, Text, and other filters"
readme = "README.md"
license = "LGPL-3.0-only"
license-files = ["COPYING.LESSER"]
requires-python = ">=3.12"
authors = [{ name = "Akarin", email = "i@akarin.info" }]
maintainers = [
    { name = "Jaded Encoding Thaumaturgy", email = "jaded.encoding.thaumaturgy@gmail.com" },
]
dependencies = ["vapoursynth>=74"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Topic :: Multimedia :: Video",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: C++",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]

[dependency-groups]
dev = ["hatchling>=1.27.0", "packaging"]

[project.urls]
"Source Code" = "https://github.com/Jaded-Encoding-Thaumaturgy/akarin-vapoursynth-plugin"
"Bug Tracker" = "https://github.com/Jaded-Encoding-Thaumaturgy/akarin-vapoursynth-plugin/issues"
"Contact" = "https://discord.gg/XTpc6Fa9eB"

[tool.hatch.version]
path = "meson.build"
pattern = "version: '(?P<version>\\d*.\\d*.\\d*)'"

[tool.hatch.build.targets.sdist]
include = [
    "banding",
    "expr",
    "expr2",
    "ngx",
    "text",
    "vfx",
    "meson.build",
    "meson_options.txt",
    "plugin.cpp",
    "plugin.h",
    "version.h.in",
    "*.nix",
    "flake.lock",
    "hatch_build.py",
]

[tool.hatch.build.targets.wheel]
include = ["vapoursynth/plugins"]
artifacts = [
    "vapoursynth/plugins/**/*.dylib",
    "vapoursynth/plugins/**/*.so",
    "vapoursynth/plugins/**/*.dll",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
